--- a/frontend/assets/css/tailwind.scss
+++ b/frontend/assets/css/tailwind.scss
@@ -1,3 +1,63 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer base {
+  :root {
+    --background: 240 29% 97%;
+    --component-background: 210 20% 98%;
+    --foreground: 0 0% 15%;
+    --card: 240 29% 97%;
+    --card-foreground: 0 0% 15%;
+    --popover: 240 29% 97%;
+    --popover-foreground: 0 0% 15%;
+    --primary: 267 50% 40%;
+    --primary-foreground: 210 20% 98%;
+    --secondary: 0 0% 91%;
+    --secondary-foreground: 0 0% 15%;
+    --muted: 0 0% 91%;
+    --muted-foreground: 220 8.9% 46.1%;
+    --accent: 0 0% 91%;
+    --accent-foreground: 0 0% 15%;
+    --destructive: 1 61% 55%;
+    --destructive-foreground: 210 20% 98%;
+    --border:0 0% 43%;
+    --input:0 0% 43%;
+    --ring:267 50% 32%;
+    --radius: 0.5rem;
+  }
+
+  .dark {
+    --background:0 0% 15%;
+    --foreground:210 20% 98%;
+    --card:0 0% 15%;
+    --card-foreground:210 20% 98%;
+    --popover:0 0% 15%;
+    --popover-foreground:210 20% 98%;
+    --primary:263.4 70% 50.4%;
+    --primary-foreground:210 20% 98%;
+    --secondary:215 27.9% 16.9%;
+    --secondary-foreground:210 20% 98%;
+    --muted:215 27.9% 16.9%;
+    --muted-foreground:217.9 10.6% 64.9%;
+    --accent:215 27.9% 16.9%;
+    --accent-foreground:210 20% 98%;
+    --destructive:0 62.8% 30.6%;
+    --destructive-foreground:210 20% 98%;
+    --border:215 27.9% 16.9%;
+    --input:215 27.9% 16.9%;
+    --ring:263.4 70% 50.4%;
+  }
+}
+
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+
+  body {
+    @apply bg-background text-foreground;
+  }
+}
